CreateRoomWithPictures is working