@@ -1,13 +1,14 @@
 package topg.bimber_user_service.service;
 
+import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
-import topg.bimber_user_service.dto.requests.RoomRequestDto;
-import topg.bimber_user_service.dto.responses.RoomResponseDto;
+import topg.bimber_user_service.dto.requests.RoomRequest;
+import topg.bimber_user_service.dto.responses.RoomResponse;
 import topg.bimber_user_service.exceptions.UserNotFoundInDb;
 import topg.bimber_user_service.models.*;
 import topg.bimber_user_service.repository.HotelRepository;
@@ -21,25 +22,28 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class RoomServiceImpl implements RoomService {
     private final RoomRepository roomRepository;
     private final HotelRepository hotelRepository;
     private final RoomPictureRepository roomPictureRepository;
 
+    public RoomServiceImpl(RoomRepository roomRepository, HotelRepository hotelRepository, RoomPictureRepository roomPictureRepository) {
+        this.roomRepository = roomRepository;
+        this.hotelRepository = hotelRepository;
+        this.roomPictureRepository = roomPictureRepository;
+    }
 
-    // Creates a new room and associates it with a hotel
     @Transactional
     @Override
-    public RoomResponseDto createRoom(RoomRequestDto roomRequestDto, List<MultipartFile> pictures) {
-        Hotel hotel = hotelRepository.findById(roomRequestDto.hotelId())
+    public RoomResponse createRoom(RoomRequest roomRequest, List<MultipartFile> pictures) {
+        Hotel hotel = hotelRepository.findById(roomRequest.getHotelId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Hotel not found"));
 
         Room room = Room.builder()
                 .hotel(hotel)
-                .roomType(roomRequestDto.roomType())
-                .price(roomRequestDto.price())
-                .available(true)
+                .roomType(roomRequest.getRoomType())
+                .price(roomRequest.getPrice())
+                .available(roomRequest.getAvailable())
                 .build();
 
         Room savedRoom = roomRepository.save(room);
@@ -61,181 +65,183 @@ public class RoomServiceImpl implements RoomService {
             }
         }
 
-        return new RoomResponseDto(
+        return new RoomResponse
+                (
                 savedRoom.getId(),
                 savedRoom.getRoomType(),
                 savedRoom.getPrice(),
                 savedRoom.isAvailable(),
-                savedPictures.stream().map(RoomPicture::getFileName).toList()
-        );
-    }
-
-    @Override
-    @Transactional
-    public String editRoomById(Long id, RoomRequestDto roomRequestDto) {
-        Room room = roomRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundInDb("Room not found"));
-
-        if (roomRequestDto.roomType() != null) {
-            room.setRoomType(roomRequestDto.roomType());
-        }
-        if (roomRequestDto.price() != null) {
-            room.setPrice(roomRequestDto.price());
-        }
-        if (roomRequestDto.available() != null) {
-            room.setAvailable(roomRequestDto.available());
-        }
-
-        room = roomRepository.save(room);
-
-        return "You have successfully updated room: " + room.getId();
-    }
-
-
-    @Override
-    @Transactional
-    public String deleteRoomById(Long id) {
-        Room room = roomRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundInDb("Room not found"));
-        roomRepository.delete(room);
-        return "You have successfully deleted room with id:  " + room.getId();
-    }
-
-
-    @Override
-    public List<RoomResponseDto> findAllRoomsByHotelId(Long hotelId) {
-        List<Room> rooms = roomRepository.findByHotelId(hotelId);
-        return rooms.stream()
-                .map(room-> {
-                    List<String> pictureUrls = room.getPictures().stream()
-                            .map(RoomPicture::getFileName)
-                            .toList();
-
-                    return new RoomResponseDto(
-                            room.getId(),
-                            room.getRoomType(),
-                            room.getPrice(),
-                            room.isAvailable(),
-                            pictureUrls
-                    );
-
-
-                }).collect(Collectors.toList());
-    }
-
-
-    @Override
-    public boolean isRoomAvailable(Long id) {
-        return roomRepository.findById(id)
-                .map(Room::isAvailable)
-                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + id + " not found"));
-    }
-
-
-
-
-    @Override
-    public List<RoomResponseDto> findAllAvailableHotelRooms(Long hotelId) {
-        List<Room> availableRooms = roomRepository.findByHotelIdAndAvailable(hotelId, true);
-        return availableRooms.stream()
-                .map(room-> {
-                    List<String> pictureUrls = room.getPictures().stream()
-                            .map(RoomPicture::getFileName)
-                            .toList();
-                    return new RoomResponseDto(
-                            room.getId(),
-                            room.getRoomType(),
-                            room.getPrice(),
-                            room.isAvailable(),
-                            pictureUrls
-                    );
-                }).collect(Collectors.toList());
-    }
-
-
-    @Override
-    public RoomResponseDto deactivateRoomByHotelId(Long hotelId, Long roomId) {
-        Room room = roomRepository.findByHotelIdAndId(hotelId, roomId)
-                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + roomId + " not found in hotel with ID " + hotelId));
-
-        room.setAvailable(false);
-        room = roomRepository.save(room);
-        List<String> pictureUrls = room.getPictures().stream()
-                .map(RoomPicture::getFileName)
-                .toList();
-
-        return new RoomResponseDto(
-                room.getId(),
-                room.getRoomType(),
-                room.getPrice(),
-                room.isAvailable(),
-                pictureUrls
+                savedPictures.stream().map(RoomPicture::getFileName).collect(Collectors.toList())
         );
     }
 
 
+//    @Override
+//    @Transactional
+//    public String editRoomById(Long id, RoomRequest roomRequestDto) {
+//        Room room = roomRepository.findById(id)
+//                .orElseThrow(() -> new UserNotFoundInDb("Room not found"));
+//
+//        if (roomRequestDto.roomType() != null) {
+//            room.setRoomType(roomRequestDto.roomType());
+//        }
+//        if (roomRequestDto.price() != null) {
+//            room.setPrice(roomRequestDto.price());
+//        }
+//        if (roomRequestDto.available() != null) {
+//            room.setAvailable(roomRequestDto.available());
+//        }
+//
+//        room = roomRepository.save(room);
+//
+//        return "You have successfully updated room: " + room.getId();
+//    }
+//
+
+//    @Override
+//    @Transactional
+//    public String deleteRoomById(Long id) {
+//        Room room = roomRepository.findById(id)
+//                .orElseThrow(() -> new UserNotFoundInDb("Room not found"));
+//        roomRepository.delete(room);
+//        return "You have successfully deleted room with id:  " + room.getId();
+//    }
 
 
-    @Override
-    public RoomResponseDto activateRoomByHotelId(Long hotelId, Long roomId) {
-        Room room = roomRepository.findByHotelIdAndId(hotelId, roomId)
-                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + roomId + " not found in hotel with ID " + hotelId));
-
-        room.setAvailable(true);
-        room = roomRepository.save(room);
-        List<String> pictureUrls = room.getPictures().stream()
-                .map(RoomPicture::getFileName)
-                .toList();
-
-        return new RoomResponseDto(
-                room.getId(),
-                room.getRoomType(),
-                room.getPrice(),
-                room.isAvailable(),
-                pictureUrls
-        );
-    }
-
-
-    @Override
-    public List<RoomResponseDto> filterHotelRoomByType(Long hotelId, String type) {
-        List<Room> rooms = roomRepository.findByHotelIdAndRoomType(hotelId, RoomType.valueOf(type.toUpperCase()));
-
-        return rooms.stream()
-                .map(room-> {
-                    List<String> pictureUrls = room.getPictures().stream()
-                            .map(RoomPicture::getFileName)
-                            .toList();
-                    return new RoomResponseDto(
-                            room.getId(),
-                            room.getRoomType(),
-                            room.getPrice(),
-                            room.isAvailable(),
-                            pictureUrls
-                    );
-                }).collect(Collectors.toList());
-    }
+//    @Override
+//    public List<RoomResponse> findAllRoomsByHotelId(Long hotelId) {
+//        List<Room> rooms = roomRepository.findByHotelId(hotelId);
+//        return rooms.stream()
+//                .map(room-> {
+//                    List<String> pictureUrls = room.getPictures().stream()
+//                            .map(RoomPicture::getFileName)
+//                            .toList();
+//
+//                    return new RoomResponse(
+//                            room.getId(),
+//                            room.getRoomType(),
+//                            room.getPrice(),
+//                            room.isAvailable(),
+//                            pictureUrls
+//                    );
+//
+//
+//                }).collect(Collectors.toList());
+//    }
+//
+//
+//    @Override
+//    public boolean isRoomAvailable(Long id) {
+//        return roomRepository.findById(id)
+//                .map(Room::isAvailable)
+//                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + id + " not found"));
+//    }
 
 
-    @Override
-    public List<RoomResponseDto> filterByPriceAndState(BigDecimal minPrice, BigDecimal maxPrice, String state) {
-        List<Room> rooms = roomRepository.findByPriceBetweenAndHotel_State(minPrice, maxPrice, State.valueOf(state.toUpperCase()));
 
 
-        return rooms.stream()
-                .map(room-> {
-                    List<String> pictureUrls = room.getPictures().stream()
-                            .map(RoomPicture::getFileName)
-                            .toList();
-                    return new RoomResponseDto(
-                            room.getId(),
-                            room.getRoomType(),
-                            room.getPrice(),
-                            room.isAvailable(),
-                            pictureUrls
-                    );
-                }).collect(Collectors.toList());
-    }
+//    @Override
+//    public List<RoomResponse> findAllAvailableHotelRooms(Long hotelId) {
+//        List<Room> availableRooms = roomRepository.findByHotelIdAndAvailable(hotelId, true);
+//        return availableRooms.stream()
+//                .map(room-> {
+//                    List<String> pictureUrls = room.getPictures().stream()
+//                            .map(RoomPicture::getFileName)
+//                            .toList();
+//                    return new RoomResponse(
+//                            room.getId(),
+//                            room.getRoomType(),
+//                            room.getPrice(),
+//                            room.isAvailable(),
+//                            pictureUrls
+//                    );
+//                }).collect(Collectors.toList());
+//    }
+
+
+//    @Override
+//    public RoomResponse deactivateRoomByHotelId(Long hotelId, Long roomId) {
+//        Room room = roomRepository.findByHotelIdAndId(hotelId, roomId)
+//                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + roomId + " not found in hotel with ID " + hotelId));
+
+//        room.setAvailable(false);
+//        room = roomRepository.save(room);
+//        List<String> pictureUrls = room.getPictures().stream()
+//                .map(RoomPicture::getFileName)
+//                .toList();
+//
+//        return new RoomResponse(
+//                room.getId(),
+//                room.getRoomType(),
+//                room.getPrice(),
+//                room.isAvailable(),
+//                pictureUrls
+//        );
+//    }
+
+
+
+//
+//    @Override
+//    public RoomResponse activateRoomByHotelId(Long hotelId, Long roomId) {
+//        Room room = roomRepository.findByHotelIdAndId(hotelId, roomId)
+//                .orElseThrow(() -> new UserNotFoundInDb("Room with ID " + roomId + " not found in hotel with ID " + hotelId));
+//
+//        room.setAvailable(true);
+//        room = roomRepository.save(room);
+//        List<String> pictureUrls = room.getPictures().stream()
+//                .map(RoomPicture::getFileName)
+//                .toList();
+//
+//        return new RoomResponse(
+//                room.getId(),
+//                room.getRoomType(),
+//                room.getPrice(),
+//                room.isAvailable(),
+//                pictureUrls
+//        );
+//    }
+//
+//
+//    @Override
+//    public List<RoomResponse> filterHotelRoomByType(Long hotelId, String type) {
+//        List<Room> rooms = roomRepository.findByHotelIdAndRoomType(hotelId, RoomType.valueOf(type.toUpperCase()));
+//
+//        return rooms.stream()
+//                .map(room-> {
+//                    List<String> pictureUrls = room.getPictures().stream()
+//                            .map(RoomPicture::getFileName)
+//                            .toList();
+//                    return new RoomResponse(
+//                            room.getId(),
+//                            room.getRoomType(),
+//                            room.getPrice(),
+//                            room.isAvailable(),
+//                            pictureUrls
+//                    );
+//                }).collect(Collectors.toList());
+//    }
+//
+//
+//    @Override
+//    public List<RoomResponse> filterByPriceAndState(BigDecimal minPrice, BigDecimal maxPrice, String state) {
+//        List<Room> rooms = roomRepository.findByPriceBetweenAndHotel_State(minPrice, maxPrice, State.valueOf(state.toUpperCase()));
+//
+//
+//        return rooms.stream()
+//                .map(room-> {
+//                    List<String> pictureUrls = room.getPictures().stream()
+//                            .map(RoomPicture::getFileName)
+//                            .toList();
+//                    return new RoomResponse(
+//                            room.getId(),
+//                            room.getRoomType(),
+//                            room.getPrice(),
+//                            room.isAvailable(),
+//                            pictureUrls
+//                    );
+//                }).collect(Collectors.toList());
+//    }
 
 
 }
